--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ header {
 		<table style="border-top:3px #E1C4C4 solid; margin-left: auto; margin-right: auto;">
 
 			<tr align="center">
-				<td width="33%"><img src="hw0.gif" width="300" height="300"/></td>
+				<td width="33%"><img src="./hw0/hw0.gif" width="300" height="300"/></td>
 				<td width="33%"></td>
 				<td width="33%"></td>
 			</tr>
