--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@ header {
 			<tr align="center">
 				<td width="33%"><img src="./hw0/hw0.gif" width="300" height="300"/></td>
 				<td width="33%"><img src="./hw1/hw1.gif" width="300" height="300"/></td>
-				<td width="33%"></td>
+				<td width="33%"><img src="./hw2/hw2.gif" width="300" height="300"/></td>
 			</tr>
 			
 			<tr align="center">
 				<td bgcolor="#E1C4C4"><a href="./hw0/hw0.html">hw0</a></td>
 				<td bgcolor="#E1C4C4"><a href="./hw1/hw1.html">hw1</a></td>
-				<td bgcolor="#E1C4C4">待續</td>
+				<td bgcolor="#E1C4C4"><a href="./hw2/hw2.html">hw2</a></td>
 			</tr>
 			
 			
