--- a/hw2/hw2.html
+++ b/hw2/hw2.html
@@ -152,7 +152,7 @@ function init() {
 	
 	var axes = new THREE.AxisHelper (10);
 	//scene.add (axes);
-	steve.add(axes);
+	//steve.add(axes);
 	steve.add (torso);
 	scene.add(steve);
 	//////////////////////////////////////
