--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@ header {
 				<td bgcolor="#E1C4C4"><a href="./hw2/hw2.html">hw2</a></td>
 			</tr>
 			
+			<tr align="center">
+				<td width="33%"><img src="./hw3/hw3.gif" width="300" height="300"/></td>
+				<td width="33%">待續</td>
+				<td width="33%">待續</td>
+			</tr>
+			
+			<tr align="center">
+				<td bgcolor="#E1C4C4"><a href="./hw3/hw3.html">hw3</a></td>
+				<td bgcolor="#E1C4C4">待續</td>
+				<td bgcolor="#E1C4C4">待續</td>
+			</tr>
+			
 			
 
 		</table>
